--- a/include/index_head.html
+++ b/include/index_head.html
@@ -23,7 +23,7 @@
           <li><a href="#">Company</a></li>
         </ul>
       </li>
-      <li><a href="#">Find Store</a></li>
+      <li><a href="/domino/sub_page/findus.html">Find Store</a></li>
     </ul>
     <ul class="util">
     <?
